--- a/Report/Report.tex
+++ b/Report/Report.tex
@@ -38,6 +38,12 @@ detail. You might be penalized if your report includes too many irrelevant detai
 \section{Introduction}
 	We're given the grand task of 
 \section{Implementation}
+	\subsection*{Notes}
+		\begin{itemize}
+			\item Implemented Boolean Litterals: true and false.
+			\subitem Added test files bool.fo, bool.in, bool.out
+		\end{itemize}
+	
 \section{Results}
 \section{Conclusion}
 
